fix rendering of text on mobile devices

--- a/custom.scss
+++ b/custom.scss
@@ -97,7 +97,7 @@ a, a:link, a:visited {
   font-weight: bold;
   margin: auto;
   position: static;
-  font-size: 4.3rem;
+  font-size: 10vw;
   font-weight: bold;
   letter-spacing: 0.3rem;
   text-shadow: 0px 0px 6px #305182;
@@ -106,7 +106,7 @@ a, a:link, a:visited {
   position: absolute;
   bottom: 80%;
   left: 30%;
-  font-size: 1rem;
+  font-size: 2vw;
   letter-spacing: 0.2rem;
   text-shadow: 0px 0px 6px #000;
 }
@@ -115,7 +115,7 @@ a, a:link, a:visited {
   position: absolute;
   top: 80%;
   left: 20%;
-  font-size: 1rem;
+  font-size: 2vw;
   letter-spacing: 0.2rem;
   text-shadow: 0px 0px 8px #000;
 }
